# golden-retriever

./: .gitignore  manage.py  pyproject.toml  pytest.ini  tokens_template.py
domain/dtos/: __init__.py  interaction_dto.py  retrieve_last_interactions_service_input_dto.py
domain/entities/: __init__.py  interaction.py
domain/factories/: __init__.py  interaction_factory.py
domain/repositories/: __init__.py  interaction_repository.py
domain/services/: __init__.py  retrieve_last_interactions_service.py
domain/tests/test_factories/: __init__.py  interaction_description_test_factory.py  interaction_dto_test_factory.py  interaction_test_factory.py  interaction_time_stamp_test_factory.py  retrieve_last_interactions_service_input_dto_test_factory.py  user_account_test_factory.py
domain/tests/unit/dtos/: test_interaction_dto.py
domain/tests/unit/factories/: test_interaction_factory.py
domain/tests/unit/services/: test_retrieve_last_interactions_service.py
domain/value_objects/: __init__.py  interaction_description.py  interaction_time_stamp.py  user_account.py  user_id.py
infrastructure/django_api/api/: apps.py  urls.py
infrastructure/django_api/api/serializers/: interaction_dto_serializer.py
infrastructure/django_api/api/views/: instagram_view.py
infrastructure/django_api/django_api/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
infrastructure/repositories/instagram/: instagram_api_url.py  instagram_interaction_dto.py  instagram_interaction_repository.py
infrastructure/tests/integration/: test_instagram_api_url.py
(+4 files in other folders)
