[tool.poetry]
name = "golden_retriever"
version = "0.1.0"
description = "Tool for retrieving user's last interactions with given social media"
authors = ["Chico Moura"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
djangorestframework = "^3.12.4"
pandas = "^1.3.4"
requests = "^2.26.0"
djangorestframework-dataclasses = "^1.0.0"

[tool.poetry.dev-dependencies]
mockito = "^1.2.2"
factory-boy = "^3.2.1"
pytest-django = "^4.4.0"
testfixtures = "^6.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
